k8s/go-api-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-test
  namespace: default
  labels:
    app: go-api-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-api-test
  template:
    metadata:
      labels:
        app: go-api-test
    spec:
      containers:
      - name: go-api-test
        image: localhost:5000/go-api-test:0.0.1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: go-api-test-service
  namespace: default
spec:
  selector:
    app: go-api-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
  type: LoadBalancer
